k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: ecommerce

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: ecommerce-backend:v5

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000

          # Configuration from ConfigMap and Secret
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          # Checks whether the application is ready
          readinessProbe:
            httpGet:
              path: /health
              port: 5000

            initialDelaySeconds: 5
            periodSeconds: 10

          # Checks whether the application is alive
          livenessProbe:
            httpGet:
              path: /health
              port: 5000

            initialDelaySeconds: 15
            periodSeconds: 20
