k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: ecommerce

spec:
  selector:
    app: backend

  ports:
    - port: 8080
      targetPort: 5000

  type: ClusterIP
